welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: type mismatch;
 found   : Unit
 required: Int
	recule(poseBiscuit);
               ^BaggleSeeker:3: error: overloaded method value avance with alternatives:
  (x$1: Int)Unit <and>
  ()Unit
 cannot be applied to (Boolean, Unit, Unit)
}else{avance(porteBiscuit,prendBiscuit,poseBiscuit);
      ^