welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.code
if(estSurBiscuit){
	recule(poseBiscuit);
}else{avance(porteBiscuit,prendBiscuit,poseBiscuit);
}

